Fix validation errors on the build newsletter page: * Update time element to include datetime attribute * remove td widths, move to CSS instead. Still appears to work fine in email clients * remove valign attributes, use CSS instead.

--- a/www/css/newsletter.css
+++ b/www/css/newsletter.css
@@ -31,6 +31,7 @@
 #maincontent #newsColumnIntro {
 	border-bottom:1px dashed #e0e0e0;
 	padding-bottom:10px;
+	margin-bottom:10px;
 }
 #maincontent #newsColumnIntro > .story:first-child{
     margin-top:0;	
@@ -293,7 +294,7 @@ Newsletter Email Preview (for building the newsletter)
     padding:0;	
 }
 #preview header h1 {
-    font-size:28px;
+    font-size:30px;
     line-height:100%;
     font-weight:bold;
 }
@@ -311,6 +312,9 @@ Newsletter Email Preview (for building the newsletter)
     font-size:12px;
     color:#909090;	
     display:block;
+}
+#preview #previewContent table tr >td {
+    vertical-align:top;	
 }
 #preview footer {
     background:#eee url('images/previewFooter.png') no-repeat 0 0;	
